kustomize/parlasite-2022/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlasite-2022
  labels:
    app: parlasite-2022
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlasite-2022
  template:
    metadata:
      labels:
        app: parlasite-2022
    spec:
      containers:
        - name: parlasite-2022
          image: parlasite-hrastnik
          ports:
            - containerPort: 3066
          resources:
            requests:
              memory: 75Mi
              cpu: 50m
            limits:
              memory: 75Mi
              cpu: 50m
