kustomize/parlasite-2022/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlasite-2022
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ajdovscina.parlameter.si
      secretName: parlasite-2022-tls
  rules:
    - host: ajdovscina.parlameter.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: parlasite-2022
                port:
                  number: 3066
